--- a/use_case_RH_dev_v1.0/html/css/deuxChoix.css
+++ b/use_case_RH_dev_v1.0/html/css/deuxChoix.css
@@ -3,7 +3,8 @@
 }
 
 .pastilleChoix{
-    background-color: rgba(255, 0, 0, 0.6);
+    /* background-color: rgba(255, 0, 0, 0.6); */
+    background-color: #E60028 ;
     display: table;
     border: 5px solid black;
     padding: 50px;
