--- a/use_case_RH_dev_v1.0/html/css/connexion.css
+++ b/use_case_RH_dev_v1.0/html/css/connexion.css
@@ -1,6 +1,5 @@
 
-
-#adminConnection {
+#adminConnection{
 	display: none;
     position: fixed;
     z-index: 1;
@@ -12,8 +11,7 @@
     background-color: rgba(0,0,0,0.4);
 }
 
-#adminConnection .modalContent {
-    
+.modalContent {
     background-color: #fefefe;
     border-radius: 8px;
     margin: 10% auto;
@@ -22,15 +20,11 @@
     width: 63%;
 }
 
-#adminConnection .close {
+.close {
 	float: right;
-    color: #E60028;
+    color: #aaa;
     font-size: 3em;
     font-weight: bold;
-    border: 3px solid #E60028;
-    padding-left: 15px;
-    padding-right: 15px;
-    border-radius: 50%;
 }
 
 #identification, .inputUser/*, #submit*/{
@@ -41,17 +35,12 @@
 	table-layout: fixed;
 }
 
-.inputUser{
+.inputUser, .inpuUser:focus{
 	border-left: 0;
 	border-top: 0;
 	border-right: 0;
 	outline: none;
 }
-
-.inputUser:focus {
-    background: #FCE4E8;
-}
-
 #identification th{
 	text-align: center;
 }
