--- a/use_case_RH_dev_v1.0/html/css/ecranAccueilAppli.css
+++ b/use_case_RH_dev_v1.0/html/css/ecranAccueilAppli.css
@@ -1,5 +1,23 @@
 /* Header */
 
+
+.loader {
+    display: none;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid blue;
+    /* border-bottom: 16px solid blue; */
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
 .large-header {
 	position: relative;
 	width: 100%;
