--- a/use_case_RH_dev_v1.0/html/css/quizzDataScience.css
+++ b/use_case_RH_dev_v1.0/html/css/quizzDataScience.css
@@ -44,7 +44,8 @@ body{
 }
 
 #out{
-	margin-left:18%;	
+    margin-left: 83%;
+    margin-bottom: 1%;
 }
 
 .icon{
@@ -85,7 +86,8 @@ body{
 	border: 3px solid white;
 	border-radius: 15px;
 	text-align: center;
-	margin-left: 35%;
+    margin-top: 3%;
+    margin-left: 20%;
 	margin-bottom: 5%;
 	width: 30%;
 }
