--- a/Quizz_Standalone/html/css/commun.css
+++ b/Quizz_Standalone/html/css/commun.css
@@ -29,6 +29,10 @@ a, a:link, a:visited, a:hover{
     text-align: center;
 }
 
+.centered{
+    text-align: center;
+}
+
 .header{
 	width: 100%;
 	height: 13%;
