--- a/Quizz_Standalone/html/css/quizzDataScience.css
+++ b/Quizz_Standalone/html/css/quizzDataScience.css
@@ -6,9 +6,14 @@ body{
 .sortieQuestionnaire{
 	display: inline;
 	transform: scale(0.5);
-	transform-origin: 60% 15%;
-	float: left;
+	transform-origin: 0% 0%;
+	/*! float: left; */
 	cursor: pointer;
+	position: absolute;
+	top: 0;
+	left: 0;
+	/*! margin-top: 2%; */
+	margin: 2% 0% 0% 2%;
 }
 
 .question{
@@ -17,18 +22,19 @@ body{
 	color: white;
 	font-size: 55pt;
 	text-align: center;
+	margin: 0% 1% 3% 1%;
 }
 
 #selonVous, .nextQuestion{
 	display: inline-block;
-	margin-left: 10%;
+	/*! margin-left: 17%; */
 }
 
 .squaredImage{
 	display: inline-block;
     overflow:hidden;
-    width:125px;
-    height:125px;
+    min-width:125px;
+    min-height:125px;
 	background-color: white;
 }
 
@@ -53,21 +59,22 @@ body{
 	visibility:hidden;
 	display: inline-block;
     position: absolute;
-    margin-top: 2%;
-    margin-left: 1%;
+    margin-top: 1.5%;
+    margin-left: 1.5%;
 }
 
 .choixMultiple{
+	display:flex;
 	margin-left: 6%;
 }
 
 .reponseMultiple{
-	display: inline-block;
+	display: inline;
 	font-weight: bold;
 	font-size: 40pt;
-	position: absolute;
-	margin-top: 2%;
-	margin-left: 5%;
+	margin-left: 3%;
+	margin-top:auto;
+	margin-bottom:auto;
 }
 
 .submitAnswers{
