--- a/Quizz_Standalone/html/css/commun.css
+++ b/Quizz_Standalone/html/css/commun.css
@@ -1,10 +1,19 @@
 body{
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-	background-image: url("../images/BlueBlur_by_Rick_Doble_Opa60.jpg");
+	/*background-image: url("../images/BlueBlur_by_Rick_Doble_Opa60.jpg");*/
+	background-color: whitesmoke;
 }
 
 #lienretour{
 	background-color:white;
+}
+
+.rotated{
+	-webkit-transform: rotate(-65deg);
+    -moz-transform: rotate(-65deg);
+    -o-transform: rotate(-65deg);
+    -ms-transform: rotate(-65deg);
+    transform: rotate(-65deg);
 }
 
 #credits{
