CssUpgrade, Lock, ReviewQuizz2.1
-> ~Implemented ReviewQuizz2.1
	-> ~Moved BusinessAnalyst
-> +Lock 2s exitQuizz button
-> +Dialogable:hover/focus bckgrndcolor
-> +Prevent cursor selection & img cursor

--- a/Quizz_Standalone/html/css/commun.css
+++ b/Quizz_Standalone/html/css/commun.css
@@ -2,8 +2,15 @@ body{
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	/*background-image: url("../images/BlueBlur_by_Rick_Doble_Opa60.jpg");*/
 	background-color: whitesmoke;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
+*.dialogable:active, *.dialogable:focus {
+    background-color: rgba(235,223,225,0.4)!important; 
 }
 
+}
 #lienretour{
 	background-color:white;
 }
